# pptx2html-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUPPORTED_FEATURES.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-demo.yml  post-merge-smoke.yml  publish-npm.yml  release.yml
.multica/: codeowners.yaml
.omc/: prd.json  progress.txt
.serena/: project.yml
autoresearch/: program.md  results.tsv  run_loop.sh
autoresearch/phases/: 01_color_fidelity.md  02_performance.md  03_effect_rendering.md  04_geometry_coverage.md
crates/pptx2html-cli/: Cargo.toml
crates/pptx2html-cli/src/: main.rs
crates/pptx2html-cli/tests/: cli_integration_test.rs  cli_smoke.rs
crates/pptx2html-cli/tests/fixtures/: single-slide.pptx  two-slides.pptx
crates/pptx2html-core/: Cargo.toml
crates/pptx2html-core/benches/: pipeline.rs
crates/pptx2html-core/src/: error.rs  lib.rs
crates/pptx2html-core/src/model/: capabilities.rs  color.rs  geometry.rs  hierarchy.rs  mod.rs  presentation.rs  slide.rs  style.rs
crates/pptx2html-core/src/parser/: chart_parser.rs  layout_parser.rs  master_parser.rs  mod.rs  relationships.rs  slide_parser.rs  theme_parser.rs  xml_utils.rs
crates/pptx2html-core/src/renderer/: geometry.rs  mod.rs  provenance.rs  text_metrics.rs
crates/pptx2html-core/src/renderer/geometry/: action_buttons.rs  arcs.rs  arrow_callouts.rs  arrows.rs  basic_shapes.rs  bent_u_arrows.rs  brackets_braces.rs  callouts.rs  chart_shapes.rs  circular_arrows.rs  connectors.rs  curved_arrows.rs  custom_geom.rs  flowchart.rs  math.rs  misc.rs  rects.rs  scrolls_tabs.rs  shared.rs  stars.rs  tests.rs  waves_polys.rs
crates/pptx2html-core/src/resolver/: inheritance.rs  placeholder.rs  style_ref.rs
crates/pptx2html-core/tests/: coverage_regression_test.rs  edge_case_test.rs  hierarchy_test.rs  integration_test.rs  public_api_test.rs  renderer_regression_test.rs
crates/pptx2html-core/tests/fixtures/: mod.rs
crates/pptx2html-py/: Cargo.toml  pptx2html.pyi  pyproject.toml
crates/pptx2html-py/src/: lib.rs
crates/pptx2html-py/tests/: test_runtime.py
crates/pptx2html-wasm/: Cargo.toml  README.md
crates/pptx2html-wasm/demo/: index.html  pkg
crates/pptx2html-wasm/src/: lib.rs
crates/pptx2html-wasm/tests/: check-package-contract.mjs  check-tag-version.mjs  node-smoke.mjs  package-root-smoke.mjs
docs/: CONVENTIONS.md
docs/adr/: ADR-template.md  README.md
docs/architecture/: ARCHITECTURE.md  CAPABILITY_MATRIX.md  REMAINING_WORK_PLAN.md  SUPPORTED_FEATURES.md
docs/onlyoffice-analysis/: color-resolution-logic.md  complexity-breakdown.md  module-map.md  shape-parsing-logic.md  slide-hierarchy-logic.md
docs/reference/: color-resolution-chain.md  ecma376-dml-elements.md  ecma376-pml-elements.md  emu-coordinate-system.md  placeholder-types.md  preset-geometry-catalog.md  slide-inheritance.md
docs/release-notes/: README.md  pre-release-checklist.md  unreleased-draft.md
docs/superpowers/plans/: 2026-04-06-p0-exactness-gate.md
docs/superpowers/specs/: 2026-04-06-p0-exactness-gate-design.md
evaluate/: README.md  candidate_render.py  check_exactness_contract.py  create_adjustment_benchmark_deck.py  create_golden_set.py  evaluate_fidelity.py  powerpoint_evidence.py  reference_render.py  reference_render_powerpoint.ps1  requirements.txt  scaffold_powerpoint_golden_batch.py  shape_actual_coverage.py  summarize_powerpoint_golden.py  validate_powerpoint_golden.py
evaluate/powerpoint_golden/: README.md  manifest.example.json  metadata.example.json
evaluate/tests/: test_check_exactness_contract.py  test_powerpoint_evidence_cli.py  test_scaffold_powerpoint_golden_batch.py  test_summarize_powerpoint_golden.py  test_validate_powerpoint_golden.py
pptx2html-enhance/: README.md  pyproject.toml
pptx2html-enhance/src/pptx2html_enhance/: __init__.py  enhancer.py  models.py
pptx2html-enhance/src/pptx2html_enhance/handlers/: __init__.py  base.py  effects.py  math_handler.py  smartart.py
pptx2html-enhance/src/pptx2html_enhance/providers/: __init__.py  anthropic.py  base.py  openai.py
pptx2html-enhance/src/pptx2html_enhance/utils/: html_patch.py  prompts.py
pptx2html-enhance/tests/: conftest.py  test_enhancer.py  test_handlers.py  test_html_patch.py
scripts/: prepare_wasm_release_package.sh  read_release_version.sh
src/: error.rs  lib.rs  main.rs
src/model/: color.rs  geometry.rs  hierarchy.rs  mod.rs  presentation.rs  slide.rs  style.rs
src/parser/: layout_parser.rs  master_parser.rs  mod.rs  slide_parser.rs  theme_parser.rs
src/renderer/: mod.rs
src/resolver/: inheritance.rs  mod.rs  placeholder.rs
tests/: hierarchy_test.rs  integration_test.rs
tests/fixtures/: mod.rs
