[package]
name = "pptx2html-cli"
version = "0.5.0"
edition = "2024"
description = "CLI tool for converting PPTX to HTML"
license = "MIT"
repository = "https://github.com/hyungjoo-drb/pptx2html-rs"

[dependencies]
pptx2html-core = { path = "../pptx2html-core" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[[bin]]
name = "pptx2html"
path = "src/main.rs"
