[package]
name = "pptx2html-cli"
version = "1.1.0"
edition = "2024"
description = "CLI tool for converting PPTX to HTML"
license = "MIT"
repository = "https://github.com/kim62210/pptx2html-turbo"
keywords = ["pptx", "html", "cli", "converter", "presentation"]
categories = ["command-line-utilities"]

[dependencies]
pptx2html-core = { path = "../pptx2html-core" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[[bin]]
name = "pptx2html"
path = "src/main.rs"
