[package]
name = "pptx2html-core"
version = "1.0.5"
edition = "2024"
description = "ECMA-376 based pure Rust PPTX to HTML converter — core library"
license = "MIT"
repository = "https://github.com/kim62210/pptx2html-turbo"
keywords = ["pptx", "html", "converter", "ooxml", "presentation"]
categories = ["parser-implementations"]

[dependencies]
quick-xml = { version = "0.37", features = ["serialize"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
thiserror = "2"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "pipeline"
harness = false
