[package]
name = "pptx2html-py"
version = "1.0.5"
edition = "2024"
description = "PyO3 Python bindings for pptx2html — convert PPTX to HTML in Python"
license = "MIT"
repository = "https://github.com/kim62210/pptx2html-turbo"
keywords = ["pptx", "html", "python", "converter", "presentation"]
categories = ["parser-implementations"]

[lib]
name = "pptx2html"
crate-type = ["cdylib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pptx2html-core = { path = "../pptx2html-core" }
pyo3 = { version = "0.25" }

[dev-dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
