[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pptx2html"
requires-python = ">=3.8"
description = "Convert PPTX to high-fidelity HTML — powered by Rust"
license = { text = "MIT" }
keywords = ["pptx", "html", "converter", "powerpoint"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Markup :: HTML",
]

[tool.maturin]
features = ["pyo3/extension-module"]
