[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pptx2html"
version = "1.0.0"
requires-python = ">=3.8"
description = "Convert PPTX to high-fidelity HTML — powered by Rust"
license = { text = "MIT" }
keywords = ["pptx", "html", "converter", "powerpoint"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
Homepage = "https://github.com/kim62210/pptx2html-turbo"
Repository = "https://github.com/kim62210/pptx2html-turbo"
Issues = "https://github.com/kim62210/pptx2html-turbo/issues"

[tool.maturin]
features = ["extension-module"]
