[package]
name = "pptx2html-wasm"
version = "1.0.3"
edition = "2024"
description = "WASM bindings for pptx2html — convert PPTX to HTML in the browser"
license = "MIT"
repository = "https://github.com/kim62210/pptx2html-turbo"
homepage = "https://github.com/kim62210/pptx2html-turbo"
keywords = ["pptx", "html", "wasm", "converter", "presentation"]
categories = ["wasm", "parser-implementations"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pptx2html-core = { path = "../pptx2html-core" }
wasm-bindgen = "0.2"
